app/2arcadia.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arcadia-main
spec:
  replicas: 2
  selector:
    matchLabels:
      app: arcadia-main

  template:
    metadata:
      labels:
        app: arcadia-main
    spec:
      containers:
        - name: arcadia-main
          image: sorinboia/arcadia-main:latest
          ports:
          - containerPort: 80
          readinessProbe:
            httpGet:
              port: 80
              path: /
              httpHeaders:
              - name: Host
                value: "arcadia-main"
            periodSeconds: 5
            successThreshold: 2
            failureThreshold: 3

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: arcadia-app2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: arcadia-app2

  template:
    metadata:
      labels:
        app: arcadia-app2
    spec:
      containers:
        - name: arcadia-app2
          image: sorinboia/arcadia-app2:latest
          ports:
          - containerPort: 80
          readinessProbe:
            httpGet:
              port: 80
              path: /api/
              httpHeaders:
              - name: Host
                value: "arcadia-app2"
            periodSeconds: 5
            successThreshold: 2
            failureThreshold: 3          

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: arcadia-app3
spec:
  replicas: 2
  selector:
    matchLabels:
      app: arcadia-app3

  template:
    metadata:
      labels:
        app: arcadia-app3
    spec:
      containers:
        - name: arcadia-app3
          image: sorinboia/arcadia-app3:latest
          ports:
          - containerPort: 80
          readinessProbe:
            httpGet:
              port: 80
              path: /app3/
              httpHeaders:
              - name: Host
                value: "arcadia-app3"
            periodSeconds: 5
            successThreshold: 2
            failureThreshold: 3
